evaluation-runs/594/k8s/prod/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: microservice-demo
  labels:
    app: mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: mysqldb
              mountPath: /var/lib/mysql
              subPath: mysql-data
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
                - -uroot
                - -ppassword
            failureThreshold: 20
            periodSeconds: 5
            timeoutSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: mysqldb
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
